fixtures/invalid/30-v0.8-has-capabilities/input.anatomy
anatomy_version = "0.8"
tagline = "v0.8 file with [[substance.capabilities]] — should be rejected"

[identity]
stack = "typescript"
form = "library"
domain = "developer-tools"
function = "anatomy-format-helper"
fingerprint = "g0bwqynxj5tnqb6e1fyq"

[[substance.capabilities]]
phrase = "validates .anatomy files against the v0.8 schema"

[[substance.capabilities]]
phrase = "discovers cascading .anatomy files in a tree"

[generated]
at = 2026-05-08T00:00:00.000Z
by = "anatomy-cli@0.10.0"
model = "none"
schema = "https://anatomy.dev/spec/0.8/schema.json"
